--- a/document/2022_Hogg_Young_Comparison.qmd
+++ b/document/2022_Hogg_Young_Comparison.qmd
@@ -47,8 +47,6 @@ While there have been a growing number of studies focused on C cycling in the PP
 
 Here we present the first eddy covariance estimates of carbon dioxide ($CO_{2}$) and $CH_{4}$ fluxes from two geographically isolated freshwater marshes in the grasslands and croplands of the PPR of Canada. Our objectives are to: (1) assess the annual GHG budget of these two wetland sites, and (2) identify the biophysical drivers of $CO_{2}$ and $CH_{4}$ fluxes at these sites and if/how they differ between sites.
 
-
-
 # Methods
 
 ## Site description
@@ -76,12 +74,54 @@ All data processing and statistical analyses were conducted using R (R Core Team
 Multivariate associations of water quality parameters across sites were analyzed using principal component analysis (PCA). All variables were centered and scaled, and PCA was done using the 'prcomp' function in base R. 
 
 To investigate the environmental factors controlling differences in FCH4 across sites, we trained random forest (RF) models on daily mean FCH4 using common meteorological and biological drivers, and a subset of water quality parameters. Meteorological variables included daily mean TA, WTD, VPD, u*, and daily GPP was included as the biological predictor. As certain water quality parameters were highly correlated (Figure [-@fig-PCA]), to capture the primary differences in water quality parameters between sites, only $SO_{4}^{2-}$, TP, $NH_{4}^{+}$, $NO_{3}^{-}$ (as (as $NO_{3}^{-}$ & $NO_{2}^{-}$)), and pH were included in the RF analysis.
-The RF algorithm is an ensemble method of regression tree. 
 
-The RF algorithm creates bootstrapped data sets and then generates independent regression trees using randomly sampled variables at each split node. Then, RF aggregates the prediction results of the individual trees. For each tree, a random subset of the predictors (mtry) are selected at each split to minimize overfitting (Breiman 2001). We used an ensemble of 500 trees, and the mtry value was chosen using a threefold cross-validation repeated three times. Any missing values in the predictor data were imputed using medians [CHECK!]. Random forests were fit using the ‘caret’ (Kuhn 2017) and ‘randomForest’ (Liaw and Wiener 2002) packages.We then used the 'varImp' function to determine the top predictors of FCH4 across sites. The RF algorithm estimates variable importance by permuting a predictor variable and then assessing how much the prediction error increases. Finally, Partial Dependence Plots (PDP), generated using the 'pdp' package, were used to investigate the marginal contribution of different predictors on FCH4.
+The RF algorithm creates bootstrapped data sets and then generates independent regression trees using randomly sampled variables at each split node. Then, RF aggregates the prediction results of the individual trees. Random forests were fit using the ‘caret’ (Kuhn 2017) and ‘ranger’ (R (Wright & Ziegler, 2017; R Core Team, 2019) packages. Similar to Knox et al. (2021), each RF was trained on all available data from both sites (i.e., the dataset was not split into training and test data), and out-of-bag data were used for hyperparameter tuning. The inclusion of all available data is justified as our goal was to assess dominant predictors of FCH4 across sites rather than develop a predictive model that can be applied to new conditions, and 2) RF is already robust to outliers (Zhang & Lu, 2012). We used an ensemble of 500 trees, and hyperparameter tuning was performed for mtry (the number of predictors randomly sampled at each devision node) and min.node.size. Predictors were ranked using permutation importance, which avoids bias from other approaches (Strobl et al., 2007), and importance values were scaled. Additionally, Partial Dependence Plots (PDP), generated using the 'pdp' package, were used to investigate the marginal contribution of different predictors on FCH4.
 
-Tigramite - https://jakobrunge.github.io/tigramite/
+Used correlation and RF to assess dominant predictors across sites
 
+However, as we're interested in looking at differences in drivers between sites, we used PCMCI (which can't be used across sites)
+
+TRANSFER ENTROPY INSTEAD?
+
+Notes: Estimating causal networks in biosphere–atmosphere interactionwith the PCMCI approach
+
+The study of biosphere–atmosphere interactions using ob-servations  typically  relies  on  correlative  approaches,  or  isbased  on  model  data,  i.e.  requires  a  priori  knowledge.  Inrecent  years,  a  new  branch  in  statistics  aiming  for  causalinference  from  empirical  data  has  experienced  substantialprogress.
+
+Ecological and climate data are often time-ordered. Thisproperty  can  be  exploited  to  construct  time  series  graph Hence,  this  method  couldbe potentially of high relevance for learning the causal de-pendency structure underlying biosphere–atmosphere inter-actions
+
+In this study, we explore the potential of PCMCI for disen-tangling and quantifying interactions and feedbacks betweenterrestrial biosphere state and fluxes and meteorological vari-ables
+
+To  foster  its  understanding,  a  fundamental  questionis how these variables causally depend on each other. 
+
+Graphical causal models (Spirtes et al.,2001) provide a framework to represent and identify causalrelations based on conditional independence relations in datastreams of this kind. In the case of an ecological monitoringsite as described here, we can exploit the temporal informa-tion of the observations for identifying a time series graph asa type of graphical model (Runge, 2018)
+
+o come to a causal interpretation, itis important to exclude dependencies between two variablesthat are due to common drivers (Xit−τ1←Xst−τ2→Xjt) orindirect  paths  (Xit−τ2→Xst−τ1→Xjt). 
+
+ How-ever, manually selecting conditions is not desirable when theunderlying dependence structure is unknown, which is whyideally the conditioning set is identified automatically.PCMCI addresses this issue by reducing the set of con-ditionsSprior to quantifying the dependence between twovariables.  The  two-step  approach  utilises  a  variant  of  thePC algorithm (Spirtes and Glymour, 1991) and the momen-tary conditional independence measure (MCI) (Runge et al.,2019b). 
+
+Functional convergence of biosphere–atmosphere interactionsin response to meteorological conditions
+
+Understanding  how  biosphere–atmosphere fluxes interact and how they causally depend onthe short-term meteorological and long-term climate condi-tions  is  crucial  for  building  predictive  terrestrial-biospheremodels (Detto et al., 2012; Green et al., 2017)
+
+ firstly, we perform causaldiscovery by PCMCI at each eddy covariance site and sea-son.  
+ 
+ PCMCI is tailored to estimate time-lagged de-pendencies from potentially high-dimensional and autocor-related multivariate time series
+ 
+ The link strength is here givenby the MCI partial correlation. In short, the MCI value givesan estimate of dependence between two time series, one po-tentially lagged, with the influence of other lagged drivers in-cluding autocorrelation removed, yielding a better interpreta-tion of the strength of a causal mechanism than the commonPearson correlation. 
+ 
+ As a particular partialcorrelation, the MCI value is independent of the variables’mean value and is normalised in [−1, 1] and can, hence, becompared between variable pairs with different units of mea-surement.
+ 
+ . Based on findings in Krichet al. (2020), we subtracted a smoothed seasonal mean fromeach variable to remove the common driver influence of theseasonal cycle that would yield spurious dependencies
+ 
+ We estimated networksin sliding windows of 3 months, taking the centre month asthe time index of each network.
+ 
+ Thoughts:
+ -Daily & remove seasonal trend
+ -3 month period
+ 
+ https://github.com/ckrich/Functional-convergence-of-biosphere-atmosphere-interactions-in-response-to-meteorology/blob/master/1-CreateDataframe.ipynb
+ 
+ 
 # Results
 
 ## Meteorology and hydrological conditions
@@ -126,7 +166,7 @@ Figure out best figure(s) to use. ALL WQ variables?
 
 ## GHG fluxes
 
-Both wetland sites were net $CO_{2}$ sources over the course of the growing season, although net $CO_{2}$ update was lower at Young relative to Hogg due to lower GPP at Young (Figure [-@fig-fluxes]). Annually, this resulted in in Hogg being a net $CO_{2}$ sink in 2021-2022, taking up 34 gC $m^{-2}$ $yr^{-1}$, while Young was a net $CO_{2}$ source of 57 gC $m^{-2}$ $yr^{-1}$. Cumulative annual GPP at Hogg was 31% greater than Young, while differences in annual Reco were smaller between sites (~10%) (Table [-@tbl-fluxes])
+Both wetland sites were net $CO_{2}$ sources over the course of the growing season, although net $CO_{2}$ update was lower at Young relative to Hogg due to lower GPP at Young (Figure [-@fig-fluxes]). Annually, this resulted in in Hogg being a net $CO_{2}$ sink in 2021-2022, taking up 34 gC $m^{-2}$ $yr^{-1}$, while Young was a net $CO_{2}$ source of 57 gC $m^{-2}$ $yr^{-1}$. Cumulative annual GPP at Hogg was 31% greater than Young, while differences in annual Reco were smaller between sites (~10%) (Table [-@tbl-fluxes]).
 
 Relative difference in $CH_{4}$ fluxes were even larger between sites (Figure [-@fig-fluxes]; Table [-@tbl-fluxes]). While Young showed a strong seasonal cycle in FCH4 over the course of the year, with daily emissions exceeding >100 mgC $m^{-2}$ $d^{-1}$ during the growing season, emissions at Hogg hovered near zero across the measurement period. As such, cumulative annual FCH4 at Young was >6 time larger at Young relative to Hogg (7.6 versus 1.12 gC $m^{-2}$ $yr^{-1}$, respectively) (Table [-@tbl-fluxes]).
 
@@ -148,7 +188,8 @@ knitr::kable(fluxes_annual)
 
 ### Between sites
 
-the RF model explained 80% of observed variance (r^{2}; mtry = 3) in the test data.
+the RF model explained 83% of observed variance ($r^{2}$) when evaluated against out-of-bag data. Based on the variable importance rankings, $SO_{4}^{2-}$ concentration was the dominant predictor of FCH4 (Figure [-@fig-VarImp]), indicating that the significant difference in $SO_{4}^{2-}$ concentration across sites (Table [-@tbl-WQ]) was the dominant factor explaining the significant differences in FCH4 across sites. MORE ON THE OTHER VARIABLES BUT WAIT FOR THE FINAL ANALYSIS.    
+
 
 ![Variable importance.](../figures/VarImp.png){#fig-VarImp}
 
@@ -165,8 +206,21 @@ production   (Gauci   et   al.2004).   A   recent   studyconducted  in  ephemera
 
 depletion   in   SO42-concentrations   has   also   beendocumented   by   Phipps   (2006)   for   a   permanentwetland  located  in  the  St.  Denis  National  WildlifeArea in Saskatchewan, Canada
 
-Read about P & pH on FCH4
+Read about P, DOC & pH on FCH4
 
+# P 
+
+https://www.sciencedirect.com/science/article/pii/S135223101200533X?casa_token=-80RBudOMqgAAAAA:J4kAMkLyyqSO-VlVz-xWAeFYBfC5TJV9SZfs9_Vb3mkzRNITLDtclb0bewoGwe2oqRMUdRiLOw#fig3
+
+Our results indicated that the effect of P enrichment on CH4 emission was time-dependent. Increased P availability did not affect CH4 emission in 2007 and 2008, but decreased in 2009 and 2010. Notably, four years of P addition decreased cumulative CH4 emission during the growing season in the freshwater marsh, and the effect did not change with fertilization rates. From 2007 to 2010, P additions of 1.2, 4.8 and 9.6 g P m−2 year−1 caused a decline in growing-season CH4 emissions by averages of 23%, 38% and 26%, respectively. Our results suggest that long-term P enrichment driven by agricultural activities would reduce CH4 emission from temperate freshwater wetlands.
+
+Similar to other natural ecosystems, wetlands are currently experiencing increased P loading as a result of human activities (Keller et al., 2005; Song et al., 2011). In wetland ecosystems, P enrichment is assumed to stimulate plant growth and increase plant production, enhancing substrate availability for methanogens through root exudates and litter turnover, which increases CH4 fluxes to the atmosphere. However, previous studies have found that the response of plant productivity to P addition is often species-specific and that this response varies by wetland type (Verhoeven and Schmitz, 1991; Chapin et al., 2004; Keller et al., 2006).
+
+Moreover, increased P loading to wetlands may change soil microbial community and activity (Keller et al., 2006) and alter plant-mediated transport of CH4 (Lu et al., 1999).
+
+See 4. Discussions
+
+This finding implies that elevated P loading would exert a consistent suppression of CH4 emission in temperate freshwater wetlands.
 
 # References {.unnumbered}
 
